# rhino

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
doc/: Makefile  conf.py  index.rst  pynosh.modelevaluator_nls.rst  requirements.txt
mesh/: ball_tetra_meshpy.py  cube_tetra_meshpy.py  cube_tetra_trivial.py  cylinder_tri.py  hexagon_tri_trivial.py  mesh.py  mesh2d.py  mesh3d.py  mesh_io.py  meshpy_interface.py  moebius_quad.py  moebius_tri.py  pacman_tri_meshpy.py  tube_tri.py
pyginla/: ginla_modelevaluator.py  gp_modelevaluator.py  jacobian_eigenvalues.py  jacobian_pcg_iteration_counter.py  jacobian_pcg_stability_postprocessor.py  keo_solver.py  magnetic_vector_potentials.py  magnetic_vector_potentials.pyx  main_jac_eigenstates.py  main_jac_solver.py  main_newton.py  mesh_io.py  model_evaluator3d.py  nls_modelevaluator.py  numerical_methods.py  preconditioners.py  yaml.py
pynosh/: __about__.py  __init__.py  bordered_modelevaluator.py  magnetic_vector_potentials.py  modelevaluator_bordering_constant.py  modelevaluator_nls.py  nls_modelevaluator.py  numerical_methods.py  preconditioners.py  setup.py  yaml.py
test/: brick-w-hole.e  mvp_tests.py  nosh_tests.py  test_f.py  test_inner.py  test_jacobian.py  test_keo.py  test_nosh.py  tetrahedron.e
tests/: cubesmall.e  ginla_tests.py  keo_test.py  mesh_tests.py  mvp_tests.py  nosh_tests.py  numerical_methods_tests.py  operator_tests.py  pacman.e  rectanglesmall.e  test_f.py  test_inner.py  test_jacobian.py  (+3 more)
(+29 files in other folders)
